--- a/Desktop/אנגולר/קבצים והתקנות/my-app/my-app/angular.json
+++ b/Desktop/אנגולר/קבצים והתקנות/my-app/my-app/angular.json
@@ -12,7 +12,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -30,7 +30,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/bootstrap/dist/css/bootstrap.css"
+
             ],
             "scripts": []
           },
@@ -93,7 +95,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": []
           }
